(1) reject instead of ignore extra arguments; (2) reject requests for environment variables containing '='     (PR 41774, but with different patch) (3) fix capitalization of usage message